@@ -157,8 +157,8 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-        
-        
+
+        <Setter Property="LabelVerticalOffset" Value="0"/>
         <Setter Property="MinWidth"
                 Value="1" />
         <Setter Property="MinHeight"
@@ -174,6 +174,7 @@
 
     <!-- REGION LABLE CONTROLS -->
     <Style TargetType="ctrls:EdgeLabelControl">
+        <Setter Property="DisplayForSelfLoopedEdges" Value="False"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ctrls:EdgeLabelControl">
@@ -184,7 +185,8 @@
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
-        </Setter> 
+        </Setter>
+        <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
     </Style>
 
     <!--VERTEX LABEL CONTROL -->
